dataset1235/2025-2/1955397009/users/2808189831/executions/1107611404_2819779400.log
== SUBMISSION (2025-08-21 13:37:42)
-- CODE: 
quantidade = int(input())
valor_unitario = float(input())
frete = float(input())
preco_total = quantidade * valor_unitario + frete

print(preco_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:31:26)
-- CODE: 
qualidade = int(input())
valor_unitario = float(input())
frente = float(input())

#Calculo do preço total
preco_total = quantidade * valor_unitario + frente

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frente
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frente
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frente
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frente
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frente
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frente
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:34:25)
-- CODE: 
quantidade = int(input())
valor_unitario = float(input())
frente = float(input())

#Calculo do preço total
preco_total = quantidade * valor_unitario + frete
 #saida
print(preco_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:34:45)
-- CODE: 
quantidade = int(input())
valor_unitario = float(input())
frente = float(input())

#Calculo do preço total
preco_total = quantidade * valor_unitario + frete
 #saida
print(preco_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:34:15)
-- CODE: 
quantidade = int(input())
valor_unitario = float(input())
frente = float(input())

#Calculo do preço total
preco_total = quantidade * valor_unitario + frete
 #saida
print(preco_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:36:22)
-- CODE: 
quantidade = int(input())
valor_unitario = float(input())
frente = float(input())


preco_total = quantidade * valor_unitario + frete

print(preco_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:34:42)
-- CODE: 
quantidade = int(input())
valor_unitario = float(input())
frente = float(input())

#Calculo do preço total
preco_total = quantidade * valor_unitario + frete
 #saida
print(preco_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:32:24)
-- CODE: 
qualidade = int(input())
valor_unitario = float(input())
frente = float(input())

#Calculo do preço total
preco_total = quantidade * valor_unitario + frete

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:32:16)
-- CODE: 
qualidade = int(input())
valor_unitario = float(input())
frente = float(input())

#Calculo do preço total
preco_total = quantidade * valor_unitario + frete

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:34:20)
-- CODE: 
quantidade = int(input())
valor_unitario = float(input())
frente = float(input())

#Calculo do preço total
preco_total = quantidade * valor_unitario + frete
 #saida
print(preco_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:36:21)
-- CODE: 
quantidade = int(input())
valor_unitario = float(input())
frente = float(input())


preco_total = quantidade * valor_unitario + frete

print(preco_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                                                ^^^^^
NameError: name 'frete' is not defined. Did you mean: 'frente'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:32:07)
-- CODE: 
qualidade = int(input())
valor_unitario = float(input())
frente = float(input())

#Calculo do preço total
preco_total = quantidade * valor_unitario + frete

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:32:10)
-- CODE: 
qualidade = int(input())
valor_unitario = float(input())
frente = float(input())

#Calculo do preço total
preco_total = quantidade * valor_unitario + frete

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco_total = quantidade * valor_unitario + frete
                  ^^^^^^^^^^
NameError: name 'quantidade' is not defined. Did you mean: 'qualidade'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
